<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FixerAppAndroid</string>
    <string name="loginValue">Login</string>
    <string name="passwordValue">Password</string>
    <string name="loginButton">Далее</string>
    <string name="exerciseTitle">Упражнение</string>
    <string name="column1Text">Подход</string>
    <string name="column2Text">Очки</string>
    <string name="column3Text">Время</string>
    <string name="plusButton">+</string>
    <string name="startButton">Старт</string>
    <string name="minutes">Минут</string>
    <string name="seconds">Секунды</string>
    <string name="okButton">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="mainDate">Дата</string>
    <string name="mainTime">Время</string>
    <string name="mainExercise">Упражнение</string>
    <string name="mainCount">Очки</string>
    <string name="statButton">Статистика</string>
    <string name="pushToSite">Отправить на сайт</string>
    <string name="pause">Пауза</string>
</resources>
