<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="444dp"
            android:id="@+id/scrollView2">
        <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:id="@+id/TableStatLayout">
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" android:id="@+id/tableRowEtalon">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mainTime"
                        android:id="@+id/mainTime"
                        android:layout_weight="1"
                        android:textSize="@dimen/fontsStatSize"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mainDate"
                        android:id="@+id/mainDate"
                        android:layout_weight="1"
                        android:textSize="@dimen/fontsStatSize"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mainExercise"
                        android:id="@+id/mainExercise"
                        android:layout_weight="1"
                        android:textSize="@dimen/fontsStatSize"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mainCount"
                        android:id="@+id/mainCount"
                        android:layout_weight="1"
                        android:textSize="@dimen/fontsStatSize"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pushToSite"
            android:id="@+id/pushToSiteButton" android:layout_gravity="center_horizontal" android:textSize="@dimen/fontsSize"/>
</LinearLayout>