<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.fixer.smile.fixerandroidapp.tableActivity" android:id="@+id/tableMainLayout">

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exerciseSpinner"
            android:prompt="@string/exerciseTitle"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:layout_marginTop="80dp" android:layout_marginBottom="110dp">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/currentStatLayout">

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/column1"
                        android:text="@string/column1Text"
                        android:textSize="@dimen/fontsSize"
                        android:layout_weight="1">

                </TextView>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/column2"
                        android:text="@string/column2Text"
                        android:textSize="@dimen/fontsSize"
                        android:layout_weight="1">

                </TextView>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/column3"
                        android:text="@string/column3Text"
                        android:textSize="@dimen/fontsSize"
                        android:layout_weight="1">

                </TextView>
            </TableRow>

            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/createdTableRow">
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text=""
                        android:textSize="@dimen/fontsSize"
                        android:id="@+id/exercise1"
                        android:layout_weight="1">

                </TextView>
                <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="0"
                        android:textSize="@dimen/fontsSize"
                        android:id="@+id/points1"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        >

                </TextView>
                <Button
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:text="00:00"
                        android:textSize="@dimen/fontsSize"
                        android:id="@+id/timeButton1"
                        android:layout_weight="1">

                </Button>

            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plusButton"
            android:id="@+id/plusButton"
            android:layout_above="@+id/statButton" android:layout_alignEnd="@+id/scrollView"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/startButton"
            android:id="@+id/startButton"
            android:visibility="visible"
            android:layout_above="@+id/statButton" android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/statButton"
            android:text="@string/statButton" android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            android:id="@+id/pauseButton"
            android:layout_above="@+id/statButton" android:layout_alignParentStart="true"/>

</RelativeLayout>