<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".loginActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginValue"
            android:id="@+id/loginView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="187dp"
            />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passwordValue"
            android:id="@+id/passwordView"
            android:gravity="center|center_vertical|center_horizontal"
            android:layout_alignBottom="@+id/progressBar1"
            android:layout_centerHorizontal="true"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginButton"
            android:id="@+id/continueButton"
            android:layout_below="@+id/passwordView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="66dp"
            android:onClick="onContinueButtonClick"/>
    <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

</RelativeLayout>

